// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should handle invalid reply ids 1`] = `
Object {
  "data": Object {
    "foundArticleIds": Array [
      "AWDZYXxAyCdS-nWhumlz",
      "5483323992880-rumor",
      "AV-Urc0jyCdS-nWhuity",
      "AVsh8u7StKp96s659Dgq",
    ],
    "foundReplyIds": Array [
      "AWDZeeV0yCdS-nWhuml8",
    ],
    "searchedText": "貼圖",
    "selectedArticleId": "AWDZYXxAyCdS-nWhumlz",
  },
  "event": Object {
    "input": "123",
    "timestamp": 1518964687709,
    "type": "text",
  },
  "isSkipUser": false,
  "issuedAt": 1518964688672,
  "replies": Array [
    Object {
      "text": "請輸入 1～1 的數字，來選擇回應。",
      "type": "text",
    },
  ],
  "state": "CHOOSING_REPLY",
  "userId": "Uaddc74df8a3a176b901d9d648b0fc4fe",
}
`;

exports[`should select reply by replyId 1`] = `
Object {
  "data": Object {
    "foundArticleIds": Array [
      "AWDZYXxAyCdS-nWhumlz",
      "5483323992880-rumor",
      "AV-Urc0jyCdS-nWhuity",
      "AVsh8u7StKp96s659Dgq",
    ],
    "foundReplyIds": Array [
      "AWDZeeV0yCdS-nWhuml8",
    ],
    "searchedText": "貼圖",
    "selectedArticleId": "AWDZYXxAyCdS-nWhumlz",
    "selectedReplyId": "AWDZeeV0yCdS-nWhuml8",
  },
  "event": Object {
    "input": 1,
    "postback": Object {
      "data": "{\\"input\\":1,\\"issuedAt\\":1518964675191}",
    },
    "timestamp": 1518964687709,
    "type": "postback",
  },
  "isSkipUser": false,
  "issuedAt": 1518964688672,
  "replies": Array [
    Object {
      "text": "有人標記這個訊息 ⚠️️ 不在查證範圍，理由是：",
      "type": "text",
    },
    Object {
      "text": "這是商業活動廣告01 這是商業活動廣告02 這是商業活動廣告03 這是商業活動廣告04 這是商業活動廣告05 這是商業活動廣告06 這是商業活動廣告07 這是商業活動廣告08 這是商業活動廣告09 這是商業活動廣告10 這是商業活動廣告11 這是商業活動廣告12 這是商業活動廣告13 這是商業活動廣告14 這是商業活動廣告15 這是商業活動廣告16 這是商業活動廣告17 這是商業活動廣告18 這是商業活動廣告19 這是商業活動廣告20",
      "type": "text",
    },
    Object {
      "text": "􀂅 ⚠️️ 此回應沒有出處，請自行斟酌回應之可信度。⚠️️  􀂅",
      "type": "text",
    },
    Object {
      "text": "💁 以上訊息由好心人提供。建議至 https://cofacts.hacktabl.org/article/AWDZYXxAyCdS-nWhumlz 觀看完整的訊息內容、其他鄉親的回應，以及他們各自所提出的理由與出處。",
      "type": "text",
    },
    Object {
      "altText": "請問上面回應是否有幫助？
「是」請輸入「y」，「否」請至手機上回應",
      "template": Object {
        "actions": Array [
          Object {
            "data": "{\\"input\\":\\"y\\",\\"issuedAt\\":1518964688672}",
            "label": "是",
            "type": "postback",
          },
          Object {
            "label": "否",
            "type": "uri",
            "uri": "line://app/1631030389-xb5mnDdN?state=ASKING_REPLY_FEEDBACK&text=%E9%80%99%E6%98%AF%E5%95%86%E6%A5%AD%E6%B4%BB%E5%8B%95%E5%BB%A3%E5%91%8A%E2%8B%AF%E2%8B%AF&prefix=%F0%9F%92%A1%20%E6%88%91%E8%A6%BA%E5%BE%97%E5%9B%9E%E6%87%89%E6%B2%92%E6%9C%89%E5%B9%AB%E5%8A%A9%EF%BC%8C%E5%8F%AF%E4%BB%A5%E9%80%99%E6%A8%A3%E6%94%B9%E9%80%B2%EF%BC%9A%0A&issuedAt=1518964688672",
          },
        ],
        "text": "請問上面回應是否有幫助？",
        "type": "confirm",
      },
      "type": "template",
    },
  ],
  "state": "ASKING_REPLY_FEEDBACK",
  "userId": "Uaddc74df8a3a176b901d9d648b0fc4fe",
}
`;
